--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -6,6 +6,11 @@
 
 /* Global Styles */
 
+@font-face { /* Cursive */
+    font-family: "QaskinBlack";
+    src: url("../fonts/mans-greback/QaskinBlack.ttf");
+}
+
 html,
 body {
     width: 100%;
@@ -161,6 +166,56 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
 }
+
+.header__words{
+    font-family: "QaskinBlack",  garamond;
+    font-size: 4em;
+    font-size: 5vw;
+    color: rgb(255, 255, 255);
+}
+
+
+@media (max-width: 700px) {
+    .header {
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        background-size: cover;
+        -o-background-size: cover;
+    }
+    .header__name { /* added */
+        font-size: 3em;
+        font-size: 8vw;
+    }
+    .header__date{
+        font-size: 2.6em;
+        font-size: 5vw;
+    }
+    .header__words { /* added */
+        font-size: 2.6em;
+        font-size: 5vw;
+    }
+}
+
+
+@media(max-width:480px) {
+    .header{
+        line-height: 0.5;
+    }
+    .header__name { /* added */
+        font-size: 1.8em;
+        font-size: 8.5vw;
+    }
+    .header__date{
+        font-size: 1.6em;
+        font-size: 5.5vw;
+    }
+    .header__words { /* added */
+        font-size: 1.6em;
+        font-size: 6.5vw;
+    }
+}
+
+
 
 /* About */
 
